--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,12 @@
       "@utils/*": ["utils/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    ".prettier.conig.ts"
+  ],
   "exclude": ["node_modules"]
 }
