--- a/package.json
+++ b/package.json
@@ -9,26 +9,41 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/lodash": "^4.14.199",
+    "@uppy/core": "^3.5.1",
+    "@uppy/dashboard": "^3.5.4",
+    "@uppy/drag-drop": "^3.0.3",
+    "@uppy/file-input": "^3.0.3",
+    "@uppy/progress-bar": "^3.0.3",
+    "@uppy/react": "^3.1.3",
+    "@uppy/tus": "^3.3.1",
+    "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
     "framer-motion": "10.12.7",
     "lodash": "^4.17.21",
+    "mongoose": "^7.6.1",
     "next": "13.5.4",
+    "next-auth": "^4.23.2",
     "prettier-plugin-tailwindcss": "^0.5.5",
     "react": "^18",
     "react-dom": "^18",
-    "swiper": "^10.3.1"
+    "react-draft-wysiwyg": "^1.15.0",
+    "swiper": "^10.3.1",
+    "video.js": "^7.6.5"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/video.js": "^7.3.53",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
     "prettier": "^3.0.3",
     "tailwindcss": "^3",
-    "typescript": "^5"
+    "typescript": "^5",
+    "wrangler": "^3.13.1"
   }
 }
