design: 메인 및 로그인/회원가입 UI 수정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,7 +38,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    ".prettier.conig.ts"
+    ".prettier.conig.ts",
+    "src/components/lectures/step2"
   ],
   "exclude": ["node_modules"]
 }
