--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGODB_URI:'mongodb+srv://admin:<s8ZN64ATn4OAVaSo>@cluster0.dxwlabi.mongodb.net/?retryWrites=true&w=majority'
+MONGODB_URI:"mongodb+srv://admin:NLyvm0g09ItNUVLU@cluster0.dxwlabi.mongodb.net/LMS?retryWrites=true&w=majority"
+EMAIL_PW: "Ducogen@team3!"
