--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query-next-experimental": "^5.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/lodash": "^4.14.199",
+    "@types/mongoose": "^5.11.97",
     "@types/nodemailer": "^6.4.13",
     "@uppy/core": "^3.5.1",
     "@uppy/dashboard": "^3.5.4",
