add: joi 의존성 추가 & 샘플 스키마 작성

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
     "framer-motion": "10.12.7",
+    "joi": "^17.11.0",
     "lodash": "^4.17.21",
     "mongoose": "^7.6.1",
     "next": "13.5.4",
