--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/lodash": "^4.14.199",
     "@types/mongoose": "^5.11.97",
     "@types/nodemailer": "^6.4.13",
+    "@types/video.js": "7.3.50",
     "@uppy/core": "^3.5.1",
     "@uppy/dashboard": "^3.5.4",
     "@uppy/drag-drop": "^3.0.3",
@@ -36,13 +37,12 @@
     "react-dom": "^18",
     "react-draft-wysiwyg": "^1.15.0",
     "swiper": "^10.3.1",
-    "video.js": "^7.6.5"
+    "video.js": "7.20.3"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/video.js": "^7.3.53",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
