--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/lodash": "^4.14.199",
     "@types/mongoose": "^5.11.97",
     "@types/nodemailer": "^6.4.13",
+    "@types/react-window": "^1.8.7",
     "@types/video.js": "7.3.50",
     "@uppy/core": "^3.5.1",
     "@uppy/dashboard": "^3.5.4",
@@ -37,6 +38,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-virtualized-auto-sizer": "^1.0.20",
+    "react-window": "^1.8.9",
     "swiper": "^10.3.1",
     "video.js": "7.20.3"
   },
